@@ -7,6 +7,7 @@ cm4all-beng-proxy (0.5.15) unstable; urgency=low
   * http-cache: accept ETag response header instead of Last-Modified
   * filter-cache: don't require Last-Modified or Expires
   * file-handler: disable ETag only when processor comes first
+  * file-handler: read ETag from xattr
 
  --
 
